(#1956) fix for footer icons clipping at top

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_footer.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_footer.scss
@@ -100,39 +100,51 @@
   .icon {
 
     &.facebook {
-      @include svg-sprite(facebook-blue);
-      font-size: 1.2em;
+      &::before {
+        @include svg-sprite(facebook-blue);
+      }
     }
 
     &.twitter {
-      @include svg-sprite(twitter-blue);
-      font-size: 1.1em;
+      &::before {
+        @include svg-sprite(twitter-blue);
+      }
     }
   
     &.instagram {
-      @include svg-sprite(instagram-blue);
-      font-size: 1.2em;
+      &::before {
+        @include svg-sprite(instagram-blue);
+      }
     }
 
     &.pinterest {
-      @include svg-sprite(pinterest-blue);
+      &::before {
+        @include svg-sprite(pinterest-blue);
+      }
     }
 
     &.youtube {
-      @include svg-sprite(youtube-blue);
-      font-size: 1.1em;
+      &::before {
+        @include svg-sprite(youtube-blue);
+      }
     }
 
     &.linkedin {
-      @include svg-sprite(linkedin-blue);
-      font-size: 120%;
+      &::before {
+        @include svg-sprite(linkedin-blue);
+      }
     }
 
     &.rss {
-      @include svg-sprite(rss-blue);
+      &::before {
+        @include svg-sprite(rss-blue);
+      }
     }
+
     &.govdelivery {
-      @include svg-sprite(gov-delivery-blue);
+      &::before {
+        @include svg-sprite(gov-delivery-blue);
+      }
     }
 
     &::after {
